# cpp_bazel

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
src/: BUILD.bazel  building.cpp  building.h  days.h  employee.cpp  employee.h  main.cpp  scheduler.cpp  scheduler.h  scheduler_test.cpp
